testing multi word searches

--- a/iam/index.html
+++ b/iam/index.html
@@ -72,7 +72,7 @@
             }
         </script>
         <script>
-            const data = ["emo", "tired", "emotionally unavailable", "bored", "emotive", "emotional", "emily"];
+            const data = ["emo", "tired", "bored in math class", "emotionally unavailable", "bored", "emotive", "emotional", "emily"];
             const autocomplete = document.getElementById("autocomplete");
             const resultsHTML = document.getElementById("results");
             autocomplete.oninput = function () {
