--- a/iam/bored%20in%20math%20class.html
+++ b/iam/bored%20in%20math%20class.html
@@ -8,6 +8,6 @@
     <title>Bored Demo</title>
   </head>
   <body>
-    <image src="/images/boredmath.png"></image>
+    <image width = 50% src="/iam/images/boredmath.png"></image>
 </body>
 </html>
