fixed potential height

--- a/iam/bored%20in%20math%20class.html
+++ b/iam/bored%20in%20math%20class.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bored Demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/iam/iamstyles.css">
   </head>
   <body>
     <image width = 50% src="/iam/images/boredmath.png"></image>
+    <div>
+      <result width = 50%>
+        <p class="title">
+          <b>Watch</b> a CIA spy tool designer talk trash about algebra
+        </p>
+      </result>
+    </div>
 </body>
 </html>
