--- a/iam/emo.html
+++ b/iam/emo.html
@@ -1,1 +1,32 @@
-<p>bro</p>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Emo Demo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="iamstyles.css">
+  </head>
+  <body>
+    <div class = "relative">
+        <div width= "600em" max-width= "calc(100% - 10em)" height = 600px class ="result">
+            <p class="title" font-size="20px">
+                <b>Watch</b> a CIA spy tool designer talk trash about algebra</p>
+            <div class = "wrapper"> 
+                <div class="title"> 
+                    <a >waitwhythough.com/math</a>
+                    <p>You will have a set of rules and frameworks in any job and must become fluent in applying them: math is your practice. But algebra is different. It’s really, really, really boring.</p>
+                </div>
+                <div class = "aside-2">
+                    <img src="/iam/images/testthumb.png"><img>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</body>
+</html>
