--- a/onefact.html
+++ b/onefact.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Potential for more trusting schools</title>
+    <title>Part time nonprofit work for college students</title>
     <link rel="shortcut icon" type="image/jpg" href="/images/favicon.ico"/>
     <meta property="og:image" content="/images/classroom.jpg" />
-    <meta name="description" content="I am sitting in on high school classes across the country to understand similarities in education across state lines.">
+    <meta name="description" content="Program Lead or software engineering work opportunities, small stipend.">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +38,7 @@
   gtag('config', 'G-QXE7C5EQFM');
 </script>
     <div id="text" style="display: flex; justify-content: center; margin-top: 1em; overflow: hidden;">
-     <iframe style="font-size: 1.125rem; text-align: center; border-width: 0px; border-style: none;" width="600em" max-width="calc(100% - 10em)" height="13000em" src="https://docs.google.com/document/d/e/2PACX-1vRlvuf6k0y3NaZZLniBdDYlKDJOt4b-9jhFlEEt7KAnoclOCaieyNdLNKV7eRZvOofOBKfk9bZluGpF/pub?embedded=true" class="container"></iframe>
+     <iframe style="font-size: 1.125rem; text-align: center; border-width: 0px; border-style: none;" width="600em" max-width="calc(100% - 10em)" height="2000em" src="https://docs.google.com/document/d/e/2PACX-1vSIrUW1dm78559gKJD6IbDxHAFlZVdDIlCNdYtSTvZlEte_EC0J3IkzpkaFb4SUaqHCzIlAXLdCHlgs/pub?embedded=true" class="container"></iframe>
         </div>
         <script>
             if (matchMedia('screen and (max-width: 480px)').matches) {
