Update and rename myra.html to embedtest.html

--- a/embedtest.html
+++ b/embedtest.html
@@ -38,7 +38,7 @@
   gtag('config', 'G-QXE7C5EQFM');
 </script>
     <div id="text" style="display: flex; justify-content: center; margin-top: 1em; overflow: hidden;">
-     <iframe style="font-size: 1.125rem; text-align: center; border-width: 0px; border-style: none;" width="600em" max-width="calc(100% - 10em)" height="13000em" src="https://docs.google.com/document/d/e/2PACX-1vSE3SppApr8PmvUp_m-UoD-mAD2oXFekfD4TJN6t6pZZampV8I1maZcE0vqy-9jr9EfyV5BNPvdX1NG/pub?embedded=true"" class="container"></iframe>
+     <iframe style="width: 98%; margin: auto; border-width: height: 1000px; border-style: none;" src="https://doorstopped.org/dashboard" class="container"></iframe>
         </div>
         <script>
             if (matchMedia('screen and (max-width: 480px)').matches) {
