--- a/embedtest.html
+++ b/embedtest.html
@@ -38,7 +38,7 @@
   gtag('config', 'G-QXE7C5EQFM');
 </script>
     <div id="text" style="display: flex; justify-content: center; margin-top: 1em; overflow: hidden;">
-     <iframe style="width: 98%; margin: auto; border-width: height: 1000px; border-style: none;" src="https://doorstopped.org/dashboard" class="container"></iframe>
+     <iframe style="width: 98%; margin: auto; height: 100vh; border-style: none;" src="https://doorstopped.org/dashboard" class="container"></iframe>
         </div>
         <script>
             if (matchMedia('screen and (max-width: 480px)').matches) {
