--- a/scale.html
+++ b/scale.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Potential for more trusting schools</title>
+    <title>Working Alone on Things That Don’t Scale</title>
     <link rel="shortcut icon" type="image/jpg" href="/images/favicon.ico"/>
-    <meta property="og:image" content="/images/classroom.jpg" />
-    <meta name="description" content="I am sitting in on high school classes across the country to understand similarities in education across state lines.">
+    <meta property="og:image" content="https://fix.school/assets/images/og/og-leverage.png" />
+    <meta name="description" content="We stopped building unscalable things, but our most critical societal problems have unscalable solutions.">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
