--- a/index.html
+++ b/index.html
@@ -121,18 +121,12 @@
             }
         }
 
-        h1 {
-            font-size: 1.5rem;
-            margin: 0.75rem 0 0.75rem;
-            font-weight: 500;
+        h1, h2 {
+            font-size: 1.25rem;
+            margin: 0.5rem 0 0.25rem;
+            font-weight: 600;
             line-height: 1.2;
             text-wrap: pretty;
-        }
-
-        h2 {
-            font-size: 1.5rem;
-            margin: 1.5rem 0 1rem;
-            font-weight: 600;
         }
 
         h3 {
@@ -227,9 +221,12 @@
 
     <div class="container">
         <h1>
-            Writing on Schools, Motivation, and Machine Learning.  
+            Purpose  
         </h1>
         <p>We need more trust in schools. We need to protect kids online. We need more open source machine learning (that works).</p>
+        <h2>
+            Index  
+        </h2>
         <ul>
             <li>
                [coming soon] Machine Learning is a search engine optimization problem.
